Fixed email text overflow

--- a/opwen_email_client/webapp/static/css/_base_email.css
+++ b/opwen_email_client/webapp/static/css/_base_email.css
@@ -12,4 +12,5 @@
 
 .panel-title .email-row {
   text-decoration: none;
+  word-wrap: break-word;
 }
